# rust-spectral

./: .travis.yml  Cargo.toml  README.md
src/: kse.rs  lib.rs  main.rs
tests/: kse.rs
