[package]
name = "spectral"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
num-traits = "0.1"
num-complex = "0.1"
itertools = "0.5"
ndarray = "0.8"
ndarray-linalg = "0.3"
ndarray-odeint = { git = "http://github.com/termoshtt/ndarray-odeint", "branch" = "consume_self" }
fftw = "0.2.0"
