[package]
name = "spectral"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[dependencies]
num-traits = "0.1"
num-complex = "0.1"
itertools = "0.5"
ndarray = "0.8"
ndarray-linalg = "0.3"
ndarray-odeint = "0.4"
fftw = "0.2.2"

[dev-dependencies]
ndarray-numtest = "0.2"
